Rename project to note5 and integrate logo assets
- Rename project from fullstack-notes to note5 across all files
- Add logo component with theme-aware switching (black/white)
- Update header to use logo instead of text title
- Add favicon support with theme-aware icons
- Update privacy page branding
- Move logo assets to public folder

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack-notes",
+  "name": "note5",
   "private": true,
   "type": "module",
   "packageManager": "pnpm@10.24.0",
@@ -22,4 +22,3 @@
     "typescript": "5.9.3"
   }
 }
-
