--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "10.1.8",
     "husky": "^9.1.7",
     "prettier": "3.7.3",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.50.0"
   }
 }
