--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "pnpm prisma:generate && pnpm prisma:migrate:deploy && next build",
+    "build": "bash scripts/build.sh",
     "start": "next start",
     "lint": "eslint --max-warnings 0 src",
     "format": "prettier --log-level silent --write \"src/**/*.{ts,tsx}\"",
